Sun Feb  6 23:51:30 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): extract previously collected
	  informations from existing Makefile.

	* ext/socket/extconf.rb: check if getaddrinfo() works fine only when
	  wide-getaddrinfo option is not given.  fixed: [ruby-dev:25422]

	* ext/tk/extconf.rb: separate tkutil configuration.

	* lib/mkmf.rb ($extmk): check if under ext directory.

	* lib/mkmf.rb (Logging.postpone): allow recursive operation.

	* lib/mkmf.rb (try_constant): make sure if really a constant, reduce
	  the number of times of compile.

	* lib/mkmf.rb (have_macro, have_var, byte_order): new functions.

	* lib/mkmf.rb (find_library): allow directory list with separators.

	* lib/mkmf.rb (arg_config): manage provided configuration options.

	* lib/mkmf.rb (dir_config): accept arrays of directory names as
	  default values.

Sun Feb  6 19:20:05 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (stack_extend): add prototype because VC++8 doesn't
	  accept __declspec(noinline) with K&R style function definitions.

Sun Feb  6 13:56:19 2005  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (new_with_hash): changed messages of exception.

	* lib/date/format.rb (str[fp]time): undocumented conversion
	  specifications %[1-3] are now deprecated.

Sun Feb  6 11:27:37 2005  Tanaka Akira  <akr@m17n.org>

	* ext/dl/dl.c (Init_dl): function declaration should precede
	  statements before C99.

Sun Feb  6 03:24:20 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Resource::TXT): multiple strings was not
	  handled.
	  (Resolv::DNS::Resource::TXT#strings): new method to return all
	  strings.
	  (Resolv::DNS::Message::MessageEncoder#put_string_list): new method.
	  (Resolv::DNS::Message::MessageDecoder#get_string_list): ditto.
	  based on [ruby-talk:129732] by Sam Roberts.

Sat Feb  5 02:24:06 2005  Minero Aoki  <aamine@loveruby.net>

	* test/ripper/test_scanner_events.rb: fix test.
